appId: com.lkurczab.fitaly
---
- runFlow: login.yaml
- tapOn:
    id: tab-profile
- assertVisible:
    id: account-profile-details-row

- tapOn:
    id: account-profile-details-row
- assertVisible:
    id: profile-details-screen

- tapOn:
    id: profile-details-photo-row
- assertVisible:
    id: profile-photo-screen
- tapOn:
    id: back-title-header-back

- tapOn:
    id: profile-details-username-row
- assertVisible:
    id: username-change-screen
- tapOn:
    id: back-title-header-back

- tapOn:
    id: profile-details-email-row
- assertVisible:
    id: email-change-screen
- tapOn:
    id: back-title-header-back

- tapOn:
    id: profile-details-password-row
- assertVisible:
    id: password-change-screen
- tapOn:
    id: back-title-header-back
- tapOn:
    id: back-title-header-back

- tapOn:
    id: account-manage-subscription-row
- assertVisible:
    id: manage-subscription-screen
- tapOn:
    id: back-title-header-back

- tapOn:
    id: account-legal-privacy-row
- assertVisible:
    id: legal-privacy-screen
- tapOn:
    id: legal-data-ai-row
- assertVisible:
    id: data-ai-clarity-screen
- tapOn:
    id: back-title-header-back
- tapOn:
    id: back-title-header-back

- tapOn:
    id: account-help-feedback-row
- assertVisible:
    id: help-feedback-screen
- tapOn:
    id: help-contact-support-row
- assertVisible:
    id: contact-support-screen
- tapOn:
    id: back-title-header-back
- tapOn:
    id: help-send-feedback-row
- assertVisible:
    id: send-feedback-screen
- tapOn:
    id: back-title-header-back
- tapOn:
    id: back-title-header-back

- runFlow:
    when:
      visible: "Zamknij"
    commands:
      - tapOn: "Zamknij"
- tapOn:
    id: tab-profile
- scrollUntilVisible:
    element:
      id: account-app-settings-row
    direction: DOWN
- tapOn:
    id: account-app-settings-row
- assertVisible:
    id: app-settings-screen
- tapOn:
    id: app-settings-notifications-row
- assertVisible:
    id: notifications-screen
- tapOn:
    id: back-title-header-back
- tapOn:
    id: back-title-header-back

- scrollUntilVisible:
    element:
      id: account-delete-account-row
    direction: DOWN
- tapOn:
    id: account-delete-account-row
- assertVisible:
    id: delete-account-screen
